--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,7 +23,7 @@
             "name": "CodeLens (Launch) - Main",
             "request": "launch",
             "mainClass": "Main",
-            "args": "-casos_cui 2020-06-01 Covid19Casos-1000.csv",
+            "args": "-estad Covid19Casos.csv",
             "projectName": "Info_III-Parcial_II_7ba107ab"
         },
         {
